# findingedoc

./: .gitignore  Dockerfile  Dockerfile.neo4j  Dockerfile.python  LICENSE  Neo4j_Breadth_Depth_Queries.md  README.md  docker-compose.yaml
notebooks/: prototype_kg_creation.ipynb
notebooks/experimental/: prototype_kg_creation.ipynb  prototype_rag.ipynb  test_streamlined_kg_creation.ipynb  test_streamlined_response.ipynb
src/: pyproject.toml  requirements.txt
src/edoc/: bulkLoad.py  chatbot.py  fileEnrichment.py  gptBasics.py
src/edoc/chatbot_components/: utils.py
src/edoc/gpt_helpers/: connect.py  gpt_basics.py
src/edoc/kg_construction/: bulk_load.py
src/edoc/kg_construction/build_tools/: graph_builder.py  utils.py
src/edoc/kg_construction/processing_tools/: file_system_processor.py
src/edoc/kg_construction/summary_tools/: summary_manager.py  utils.py
src/edoc/rag_components/: responder.py  structured_retrievers.py  unstructured_retrievers.py
