# pyproject.toml

[project]
name = "edoc"
version = "0.0.1"
description = "In this project, we will use generative AI, knowledge graphs, and Retrieval-Augmented Generation (RAG) to help developers explore codebases via a chatbot."
authors = [{name = "Will Dupree", email = "willdupree90@gmail.com"}]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["edoc"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[options]
python_requires = ">=3.11.0"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"